# diffcorrpy

./: README.md  pyproject.toml
src/diffcorrpy/: __init__.py  core.py
