[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffcorrpy"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }, # Placeholder - update later
]
description = "A Python package for Differential Correlation Analysis, translated from the R package DiffCorr."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "statsmodels",
    # Add other dependencies as needed during translation
]

[project.urls]
"Homepage" = "https://github.com/your-username/diffcorrpy" # Placeholder
"Bug Tracker" = "https://github.com/your-username/diffcorrpy/issues" # Placeholder
"Source" = "https://github.com/your-username/diffcorrpy" # Placeholder

[tool.setuptools.packages.find]
where = ["src"]
