[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffcorrpy"
version = "0.1.0"
authors = [
  { name="Kozo Nishida", email="kozo.nishida@gmail.com" },
]
description = "A Python package for Differential Correlation Analysis, translated from the R package DiffCorr."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "statsmodels",
]

[project.urls]
"Homepage" = "https://github.com/kozo2/diffcorrpy"
"Bug Tracker" = "https://github.com/kozo2/diffcorrpy/issues"
"Source" = "https://github.com/kozo2/diffcorrpy"

[tool.setuptools.packages.find]
where = ["src"]
